--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-build-backend = "flit_core.buildapi"
-requires = ["flit_core >=3.8.0,<4"]
+requires = ["setuptools", "setuptools-scm"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "rewriter"
@@ -14,10 +14,28 @@ requires-python = ">=3.10"
 classifiers = []
 dependencies = []
 
+[tool.coverage.run]
+branch = true
+source=[
+  "rewriter",
+]
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = "-vv"
+addopts = "-q"
 testpaths = [
   "tests",
 ]
+
+[tool.black]
+target-version = ["py310"]
+line-length = 100
+
+[tool.mypy]
+strict = true
+ignore_missing_imports = true
+
+[tool.ruff]
+target-version = "py310"
+line-length = 100
+select = [ "E", "F", "W", "Q", "UP", "I", "N" ]
