refactor: mypy specific files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ target-version = ["py310"]
 line-length = 100
 
 [tool.mypy]
+files = ["rewriter/**/*.py", "tests/**/*.py"]
 strict = true
 
 [tool.ruff]
