--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -20,7 +20,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: markis/python-checker@main
       with:
-        cmd: mypy --install-types --non-interactive .
+        cmd: mypy --install-types --non-interactive
 
   lint-check:
     name: lint check
