--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -8,13 +8,16 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, ubuntu-20.04, macOS-latest] # , windows-2019
+        os: [macOS-latest] # ubuntu-latest, ubuntu-20.04, windows-2019
+        architecture: [x64, arm64]
 
     steps:
       - uses: actions/checkout@v3
 
       # Used to host cibuildwheel
       - uses: actions/setup-python@v3
+        with:
+          architecture: ${{ matrix.architecture }}
 
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==2.12.1
