--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [macOS-latest] # ubuntu-latest, ubuntu-20.04, windows-2019
-        architecture: [x64, arm64]
+        architecture: [x64] # arm64, no macOS arm64 support :(
 
     steps:
       - uses: actions/checkout@v3
