--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -8,8 +8,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macOS-latest] # ubuntu-latest, ubuntu-20.04, windows-2019
-        architecture: [x64] # arm64, no macOS arm64 support :(
+        os: [ubuntu-latest] # , ubuntu-20.04, windows-2019, macOS-latest
+        architecture: [x64, arm64] # arm64, no macOS arm64 support :(
 
     steps:
       - uses: actions/checkout@v3
