--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -1,6 +1,10 @@
 name: Build
 
-on: [push, pull_request]
+on: 
+  pull_request:
+  push:
+    branches:
+    - master
 
 jobs:
   build_wheels:
@@ -8,8 +12,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest] # , ubuntu-20.04, windows-2019, macOS-latest
-        architecture: [x64, arm64] # arm64, no macOS arm64 support :(
+        os: [ubuntu-latest, macOS-latest] # , ubuntu-20.04, windows-2019, macOS-latest
+        architecture: [x64] # arm64, no macOS arm64 support :(
 
     steps:
       - uses: actions/checkout@v3
