--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -6,29 +6,54 @@ on:
     branches:
     - main
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
 jobs:
+  generate_wheels_matrix:
+    name: Generate wheels matrix
+    runs-on: ubuntu-latest
+    outputs:
+      include: ${{ steps.set-matrix.outputs.include }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install cibuildwheel and pypyp
+        run: |
+          pipx install cibuildwheel==2.11.1
+          pipx install pypyp==1
+      - id: set-matrix
+        run: |
+          MATRIX=$(
+            {
+              cibuildwheel --config-file=pyproject.toml --print-build-identifiers --platform linux . \
+              | pyp 'json.dumps({"only": x, "os": "ubuntu-latest"})' \
+              && cibuildwheel --config-file=pyproject.toml --print-build-identifiers --platform macos . \
+              | pyp 'json.dumps({"only": x, "os": "macos-latest"})'
+            } | pyp 'json.dumps(list(map(json.loads, lines)))'
+          )
+          echo "include=$MATRIX" | tee -a $GITHUB_OUTPUT
+        env:
+          CIBW_ARCHS_LINUX: x86_64
+          CIBW_ARCHS_MACOS: x86_64 arm64
+          CIBW_ARCHS_WINDOWS: AMD64
+
   build_wheels:
-    name: Build wheels on ${{ matrix.os }}
+    name: Build ${{ matrix.only }}
+    needs: generate_wheels_matrix
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
-        os: [ubuntu-latest, macOS-latest] # , ubuntu-20.04, windows-2019, macOS-latest
-        architecture: [x64] # arm64, no macOS arm64 support :(
+        include: ${{ fromJson(needs.generate_wheels_matrix.outputs.include) }}
 
     steps:
       - uses: actions/checkout@v3
-
-      # Used to host cibuildwheel
-      - uses: actions/setup-python@v3
+      - uses: pypa/cibuildwheel@v2.11.1
         with:
-          architecture: ${{ matrix.architecture }}
-
-      - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.12.1
-
-      - name: Build wheels
-        run: python -m cibuildwheel --output-dir wheelhouse
+          only: ${{ matrix.only }}
 
       - uses: actions/upload-artifact@v3
         with:
+          name: dist
           path: ./wheelhouse/*.whl
