feat: rewriter is buildable and runnable

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -12,7 +12,7 @@ concurrency:
 
 jobs:
   main:
-    name: sdist + pure wheel
+    name: build sdist + pep518 wheel
     runs-on: ubuntu-latest
 
     steps:
@@ -23,7 +23,7 @@ jobs:
         with:
           python-version: "*"
 
-      - name: Install latest pip, build, twine
+      - name: Install latest pip, build
         run: |
           python -m pip install --upgrade --disable-pip-version-check pip
           python -m pip install --upgrade build
@@ -33,7 +33,7 @@ jobs:
       - name: Upload artifacts as workflow artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: sdist
+          name: disribution
           path: ./dist/*
 
   build_wheels:
@@ -45,13 +45,13 @@ jobs:
         include:
           - os: ubuntu-latest
             name: linux-x86_64
-          - os: macos-11
+          - os: macos-latest
             name: macos-x86_64
             macos_arch: "x86_64"
-          - os: macos-11
+          - os: macos-latest
             name: macos-arm64
             macos_arch: "arm64"
-          - os: macos-11
+          - os: macos-latest
             name: macos-universal2
             macos_arch: "universal2"
 
