--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -45,13 +45,13 @@ jobs:
         include:
           - os: ubuntu-latest
             name: linux-x86_64
-          - os: macos-latest
+          - os: macos-11
             name: macos-x86_64
             macos_arch: "x86_64"
-          - os: macos-latest
+          - os: macos-11
             name: macos-arm64
             macos_arch: "arm64"
-          - os: macos-latest
+          - os: macos-11
             name: macos-universal2
             macos_arch: "universal2"
 
