--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,15 +67,11 @@ build-verbosity = 1
 # - OS: Linux (no musl), Windows, and macOS
 build = "cp3*-*"
 skip = ["*-manylinux_i686", "*-musllinux_*", "*-win32", "pp-*"]
-# This is the bare minimum needed to run the test suite. Pulling in the full
-# test_requirements.txt would download a bunch of other packages not necessary
-# here and would slow down the testing step a fair bit.
 test-requires = ["pytest>=6.1.1"]
-test-command = 'pytest {project} -k "not incompatible_with_mypyc"'
-# test-command = 'rewriter --help'
+test-command = 'rewriter --help && pytest {project} -k "not incompatible_with_mypyc"'
 # Skip trying to test arm64 builds on Intel Macs. (so cross-compilation doesn't
 # straight up crash)
-test-skip = ["*-macosx_arm64", "*-macosx_universal2:arm64"]
+# test-skip = ["*-macosx_arm64", "*-macosx_universal2:arm64"]
 
 [tool.cibuildwheel.environment]
 HATCH_BUILD_HOOKS_ENABLE = "1"
