fix: shore up tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,7 +93,10 @@ build-verbosity = 1
 build = "cp3*-*"
 skip = ["*-manylinux_i686", "*-musllinux_*", "*-win32", "pp-*"]
 
+# Tests:
+# Ensure cli can execute with compiled code
+# Run test-suite with compiled code
+# Skip tests on arm64 and suppress the warning that cibuildwheel can't run tests
 test-requires = ["pytest>=6.1.1"]
-test-command = 'rewriter --help && pytest {project} -k "not incompatible_with_mypyc"'
-# Skip tests on arm64 and suppress the warning that cibuildwheel can't run test
+test-command = "rewriter --help && pytest {project}"
 test-skip = ["*-macosx_arm64", "*-macosx_universal2:arm64"]
