--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,13 +11,26 @@ authors = [
 description = "Rewrite python code"
 readme = "README.md"
 requires-python = ">=3.10"
-classifiers = []
+classifiers = [
+  "Development Status :: 4 - Beta",
+  "Environment :: Console",
+  "Intended Audience :: Developers",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent",
+  "Programming Language :: Python",
+  "Programming Language :: Python :: 3 :: Only",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Topic :: Software Development :: Libraries :: Python Modules",
+  "Topic :: Software Development :: Quality Assurance",
+]
 dependencies = [
   "black>=23"
 ]
 
 [project.scripts]
 rewriter = "rewriter:main"
+
 
 [tool.coverage.run]
 branch = true
@@ -28,6 +41,7 @@ omit = [
   "rewriter/__main__.py"
 ]
 
+
 [tool.pytest.ini_options]
 minversion = "6.0"
 addopts = "-q"
@@ -35,19 +49,23 @@ testpaths = [
   "tests",
 ]
 
+
 [tool.black]
 target-version = ["py310"]
 line-length = 100
+
 
 [tool.mypy]
 packages = ["rewriter"]
 strict = true
 mypy_path = "typings"
 
+
 [tool.ruff]
 target-version = "py310"
 line-length = 100
 select = [ "E", "F", "W", "Q", "UP", "I", "N" ]
+
 
 [tool.hatch]
 
@@ -56,45 +74,29 @@ dependencies = [
   "hatch-mypyc>=0.13.0",
   "mypy==1.1.1",
   "black>=23",
-  # Required stubs to be removed when the packages support PEP 561 themselves
-  "types-typed-ast>=1.4.2",
 ]
-# mypy-args = ["--config=pyproject.toml"] #["--ignore-missing-imports"]
+
+# mypycify options:
+# https://github.com/python/mypy/blob/v1.1.1/mypyc/build.py#L446
+opt_level = "3"
+debug_level = "0"
+
 
 [tool.cibuildwheel]
 build-frontend = "build"
 build-verbosity = 1
-# So these are the environments we target:
+
+# Target environments:
 # - Python: CPython 3.7+ only
 # - Architecture (64-bit only): amd64 / x86_64, universal2, and arm64
 # - OS: Linux (no musl), Windows, and macOS
 build = "cp3*-*"
 skip = ["*-manylinux_i686", "*-musllinux_*", "*-win32", "pp-*"]
-# This is the bare minimum needed to run the test suite. Pulling in the full
-# test_requirements.txt would download a bunch of other packages not necessary
-# here and would slow down the testing step a fair bit.
-test-command = 'rewriter --help'
-# Skip trying to test arm64 builds on Intel Macs. (so cross-compilation doesn't
-# straight up crash)
+
+# Tests:
+# Ensure cli can execute with compiled code
+# Run test-suite with compiled code
+# Skip tests on arm64 and suppress the warning that cibuildwheel can't run tests
+test-requires = ["pytest>=6.1.1"]
+test-command = "rewriter --help && pytest {project}"
 test-skip = ["*-macosx_arm64", "*-macosx_universal2:arm64"]
-
-[tool.cibuildwheel.environment]
-HATCH_BUILD_HOOKS_ENABLE = "1"
-MYPYC_OPT_LEVEL = "3"
-MYPYC_DEBUG_LEVEL = "0"
-# CPython 3.11 wheels aren't available for aiohttp and building a Cython extension
-# from source also doesn't work.
-AIOHTTP_NO_EXTENSIONS = "1"
-
-[tool.cibuildwheel.linux]
-before-build = [
-    "yum install -y clang gcc",
-]
-
-[tool.cibuildwheel.linux.environment]
-HATCH_BUILD_HOOKS_ENABLE = "1"
-MYPYC_OPT_LEVEL = "3"
-MYPYC_DEBUG_LEVEL = "0"
-# Black needs Clang to compile successfully on Linux.
-CC = "clang"
-AIOHTTP_NO_EXTENSIONS = "1"
