--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,16 @@ dependencies = [
   "black>=23"
 ]
 
+[project.optional-dependencies]
+dev = [
+  "pytest",
+  "syrupy",
+  "coverage",
+  "black",
+  "mypy",
+  "ruff",
+]
+
 [project.scripts]
 rewriter = "rewriter:main"
 
@@ -56,7 +66,7 @@ line-length = 100
 
 
 [tool.mypy]
-packages = ["rewriter"]
+files = ["rewriter/**/*.py", "tests/**/*.py"]
 strict = true
 mypy_path = "typings"
 
