--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ line-length = 100
 
 
 [tool.mypy]
-files = ["rewriter/**/*.py", "tests/**/*.py"]
+files = ["rewriter/**/*.py"]
 strict = true
 mypy_path = "typings"
 
