refactor(tests): use snapshot tests for code generation testing (#30)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,19 @@ dependencies = [
   "black>=23"
 ]
 
+[project.optional-dependencies]
+all = ["rewriter[dev,test]"]
+test = [
+  "pytest",
+  "syrupy",
+  "coverage",
+]
+dev = [
+  "black",
+  "mypy",
+  "ruff",
+]
+
 [project.scripts]
 rewriter = "rewriter:main"
 
@@ -56,7 +69,7 @@ line-length = 100
 
 
 [tool.mypy]
-packages = ["rewriter"]
+files = ["rewriter/**/*.py"]
 strict = true
 mypy_path = "typings"
 
@@ -70,11 +83,8 @@ select = [ "E", "F", "W", "Q", "UP", "I", "N" ]
 [tool.hatch]
 
 [tool.hatch.build.targets.wheel.hooks.mypyc]
-dependencies = [
-  "hatch-mypyc>=0.13.0",
-  "mypy==1.1.1",
-  "black>=23",
-]
+require-runtime-dependencies = true
+dependencies = ["hatch-mypyc"]
 
 # mypycify options:
 # https://github.com/python/mypy/blob/v1.1.1/mypyc/build.py#L446
@@ -97,6 +107,6 @@ skip = ["*-manylinux_i686", "*-musllinux_*", "*-win32", "pp-*"]
 # Ensure cli can execute with compiled code
 # Run test-suite with compiled code
 # Skip tests on arm64 and suppress the warning that cibuildwheel can't run tests
-test-requires = ["pytest>=6.1.1"]
+test-requires = [".[test]"]
 test-command = "rewriter --help && pytest {project}"
 test-skip = ["*-macosx_arm64", "*-macosx_universal2:arm64"]
